syntax = "proto3";

option go_package = "leanchat/rpc";

message Uuid {
	string data = 1;
}

message ChatMessage {
	string user_name = 1;
	string msg_content = 2;
}

message ChatChannel {
	Uuid chan_id = 1;
	string chan_name = 2;
}

service Leanchat {
	rpc PeekChannel(PeekChannelRequest) returns (PeekChannelResponse) {}
	rpc MessageChannel(MessageChannelRequest) returns (MessageChannelResponse) {}
	rpc ListChannels(ListChannelsRequest) returns (ListChannelsResponse) {}
	rpc CreateChannel(CreateChannelRequest) returns (CreateChannelResponse) {}
}

message PeekChannelRequest {
	Uuid chan_id = 1;
	uint32 req_count = 2;
}
// messages are sorted newest -> oldest
message PeekChannelResponse {
	string chan_name = 1;
	repeated ChatMessage messages = 2;
}


message MessageChannelRequest {
	Uuid chan_id = 1;
	ChatMessage message = 2;
}
message MessageChannelResponse {}


message ListChannelsRequest {
	uint32 req_count = 1;
}
message ListChannelsResponse {
	repeated ChatChannel channels = 1;
}


message CreateChannelRequest {
	string chan_name = 1;
}
message CreateChannelResponse {
	ChatChannel channel = 1;
}
